--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -475,6 +475,9 @@ video {
 .block{
   display: block;
 }
+.text-center{
+  text-align: center;
+}
 .text-3xl{
   font-size: 1.875rem;
   line-height: 2.25rem;
