--- a/public/styles/tailwind.css
+++ b/public/styles/tailwind.css
@@ -3,3 +3,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@layer base {
+    html {
+      font-family: 'Kumbh Sans', sans-serif;
+    }
+  }
