--- a/views/index.pug
+++ b/views/index.pug
@@ -1,4 +1,18 @@
 extends layout.pug
 
 block content
-	h1(class='text-3xl') Hello, world!
+	div(class= "bg-slate-200 w-auto")
+		img(class="w-60 rounded-lg" src="/images/drone.jpg")
+		div(class="flex p-16")
+			div
+				p(class="flex p-16") Frame Limited Edition
+				p(class="flex p-16") Drone FPV RTF
+			div
+				p(class="flex p-16") $230
+				p(class="flex p-16") $300
+			div
+				p(class="flex p-16") -50%
+				
+		
+
+	
