--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -513,17 +513,32 @@ html {
   margin-left: auto;
   margin-right: auto;
 }
+.mr-10{
+  margin-right: 2.5rem;
+}
+.mr-40{
+  margin-right: 10rem;
+}
+.ml-40{
+  margin-left: 10rem;
+}
+.mb-8{
+  margin-bottom: 2rem;
+}
 .ml-10{
   margin-left: 2.5rem;
 }
 .ml-5{
   margin-left: 1.25rem;
 }
-.mr-10{
-  margin-right: 2.5rem;
+.ml-8{
+  margin-left: 2rem;
 }
-.mb-8{
-  margin-bottom: 2rem;
+.mb-4{
+  margin-bottom: 1rem;
+}
+.mb-10{
+  margin-bottom: 2.5rem;
 }
 .block{
   display: block;
@@ -531,8 +546,14 @@ html {
 .flex{
   display: flex;
 }
-.h-16{
-  height: 4rem;
+.grid{
+  display: grid;
+}
+.aspect-square{
+  aspect-ratio: 1 / 1;
+}
+.h-\[\]{
+  height: ;
 }
 .h-\[445px\]{
   height: 445px;
@@ -540,14 +561,56 @@ html {
 .h-full{
   height: 100%;
 }
-.w-48{
-  width: 12rem;
+.h-16{
+  height: 4rem;
+}
+.h-20{
+  height: 5rem;
+}
+.h-auto{
+  height: auto;
+}
+.w-\[\]{
+  width: ;
+}
+.w-\[445\]{
+  width: 445;
 }
 .w-\[445px\]{
   width: 445px;
 }
 .w-full{
   width: 100%;
+}
+.w-48{
+  width: 12rem;
+}
+.w-auto{
+  width: auto;
+}
+.w-60{
+  width: 15rem;
+}
+.w-20{
+  width: 5rem;
+}
+.w-5{
+  width: 1.25rem;
+}
+.w-\[50\]{
+  width: 50;
+}
+.w-\[50\%\]{
+  width: 50%;
+}
+.grid-cols-2{
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+.grid-cols-1{
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+.grid-cols-4{
+  grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 .flex-col{
   flex-direction: column;
@@ -564,19 +627,53 @@ html {
 .justify-between{
   justify-content: space-between;
 }
+.gap-40{
+  gap: 10rem;
+}
+.gap-5{
+  gap: 1.25rem;
+}
+.gap-10{
+  gap: 2.5rem;
+}
 .gap-28{
   gap: 7rem;
 }
+.overflow-hidden{
+  overflow: hidden;
+}
+.rounded-lg{
+  border-radius: 0.5rem;
+}
 .rounded-xl{
   border-radius: 0.75rem;
+}
+.bg-slate-200{
+  --tw-bg-opacity: 1;
+  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
 }
 .object-cover{
   -o-object-fit: cover;
      object-fit: cover;
 }
+.p-16{
+  padding: 4rem;
+}
 .py-12{
   padding-top: 3rem;
   padding-bottom: 3rem;
+}
+.pb-10{
+  padding-bottom: 2.5rem;
+}
+.pt-10{
+  padding-top: 2.5rem;
+}
+.pt-4{
+  padding-top: 1rem;
+}
+.text-right{
+  text-align: right;
 }
 .text-3xl{
   font-size: 1.875rem;
@@ -593,6 +690,10 @@ html {
 .text-5xl{
   font-size: 3rem;
   line-height: 1;
+}
+.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 .font-bold{
   font-weight: 700;
