--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -648,9 +648,26 @@ html {
 .rounded-xl{
   border-radius: 0.75rem;
 }
+.border-b{
+  border-bottom-width: 1px;
+}
+.border-b-2{
+  border-bottom-width: 2px;
+}
+.border-solid{
+  border-style: solid;
+}
+.border-black{
+  --tw-border-opacity: 1;
+  border-color: rgb(29 32 38 / var(--tw-border-opacity));
+}
 .bg-slate-200{
   --tw-bg-opacity: 1;
   background-color: rgb(226 232 240 / var(--tw-bg-opacity));
+}
+.bg-orange{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 126 27 / var(--tw-bg-opacity));
 }
 .object-cover{
   -o-object-fit: cover;
@@ -659,9 +676,16 @@ html {
 .p-16{
   padding: 4rem;
 }
+.p-4{
+  padding: 1rem;
+}
 .py-12{
   padding-top: 3rem;
   padding-bottom: 3rem;
+}
+.py-4{
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 .pb-10{
   padding-bottom: 2.5rem;
@@ -695,6 +719,10 @@ html {
   font-size: 1.125rem;
   line-height: 1.75rem;
 }
+.text-4xl{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
 .font-bold{
   font-weight: 700;
 }
@@ -708,4 +736,9 @@ html {
 .text-gray{
   --tw-text-opacity: 1;
   color: rgb(105 112 125 / var(--tw-text-opacity));
+}
+.shadow{
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
