--- a/views/header.pug
+++ b/views/header.pug
@@ -3,7 +3,7 @@ header(class="h-16 flex justify-between")
         img(class="w-48", src="/images/logo.svg", alt="logo")
         nav(class="flex justify-start items-center ml-10")
             a(href="/") Accueil
-            a(href="/create", class="ml-5") Créer une annonce
+            a(href="/add-product", class="ml-5") Créer une annonce
     div(class="flex justify-between items-center mr-10")
         a(href="/register") S'inscrire
         a(href="/login", class="ml-5") Connexion
