--- a/views/index.pug
+++ b/views/index.pug
@@ -5,14 +5,15 @@ block content
         section(class='product-list-section container mx-auto')
             div(class='product__list__title')
                 h1(class='text-4xl font-bold mb-8') Liste des produits
-            div(class='product__list grid grid-cols-4')
-                div(class='product__list__item')
-                    a(href='/product')
-                        div(class='product__list__item__image w-full aspect-square obejct-cover mb-4')
-                            img(src='https://picsum.photos/1920/1080', alt='product', class='rounded-xl h-full w-full object-cover')
-                        div(class='product__list__item__info flex collum-2')
-                            div(class='product__list__item__info__title mb-4')
-                                h1(class=' text-2xl font-bold') Fall Limited Edition Sneakers
-                            div(class='product__list__item__info__price text-right')
-                                span(class='text-2xl font-bold') $125.00
+                div(class='product__list flex alo')
+                    each product in products 
+                        div(class='product__list__item')
+                            a(href='/product')
+                                div(class='product__list__item__image w-full aspect-square obejct-cover mb-4')
+                                    img(src='https://picsum.photos/1920/1080', alt='product', class='rounded-xl h-full w-full object-cover')
+                                div(class='product__list__item__info flex collum-2')
+                                    div(class='product__list__item__info__title mb-4')
+                                        h1(class=' text-2xl font-bold')= product.name
+                                    div(class='product__list__item__info__price text-right ml-auto')
+                                        span(class='text-2xl font-bold')= product.price + ",00 €"
                 
